--- a/env.example
+++ b/env.example
@@ -1,19 +1,22 @@
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=password
+DB_PASSWORD=sama_password_2025
 DB_NAME=sama_db
 DB_SSLMODE=disable
 
 # Server Configuration
 SERVER_PORT=8080
-SERVER_MODE=debug
+SERVER_MODE=production
 
 # JWT Configuration
-JWT_SECRET=your-secret-key-here
+JWT_SECRET=sama-jwt-secret-key-2025-change-in-production
 JWT_EXPIRY=24h
 
 # Logging Configuration
 LOG_LEVEL=info
-LOG_FILE=logs/app.log 
+LOG_FILE=/app/logs/app.log
+
+# Docker Configuration
+COMPOSE_PROJECT_NAME=sama-backend 
